Remove unused test dependencies
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>